@@ -39,9 +39,8 @@
   "reportOptionalSubscript": "warning",
   // Needs fixes in types-pywin32 and requires Python 3.8 to annotate ambiguous global variables
   "reportUnnecessaryComparison": "warning",
-  // TODO: Leave Unbound/Undefined to their own PR(s)
+  // TODO: Leave Unbound its own PR(s)
   "reportUnboundVariable": "warning",
-  "reportUndefinedVariable": "warning",
   // Too many dynamically generated modules. This will require type stubs to properly fix.
   "reportMissingImports": "warning",
   // IDEM, but happens when pywin32 is not in site-packages but module is found from typeshed.
